...
import Divider from '../../components/Divider'
import ReviewRender from '../../components/Review/ReviewRender'
import SendSpamModal from '../../components/Review/SendSpamModal'
import ImageModal from '../../components/Review/ImageModal'
import ReplyModal from '../../components/Review/ReplyModal'

const Reviews = props => {
  const { navigation } = props

  const {
    mt_id: mtId,
    mt_jumju_code: mtJumjuCode,
    mt_name: mtName,
...
      {/* // 답변 모달 */}


      {isLoading && <AnimateLoading description='데이터를 불러오는 중입니다.' />}

      {!isLoading &&
      (<View style={{ flex: 1, backgroundColor: '#fff' }} testID='reviewScreen'>
        <View style={{ zIndex: 99999, backgroundColor: '#fff' }}>
          <Header navigation={navigation} title='리뷰관리' />
        </View>

        {/* 커스텀 총 평점 */}
        {JSON.stringify(rate) !== '{}' && (
...
        )}
        {/* //커스텀 총 평점 */}

        {/* 리뷰 리스트 */}
        <View style={{ flex: 1 }}>
          <Animated.FlatList
            testID='reviewFlatList'
            bounces={false}
            data={list}
            renderItem={renderRow}
            keyExtractor={(list, index) => index.toString()}
            onScroll={Animated.event(
              [
...
