...
            />
          </TouchableOpacity>
        </View>

        <Divider backgroundColor='#E3E3E3' />

        <ScrollView testID='drawerMenuScrollView' showsVerticalScrollIndicator={false} bounces={false}>
          <View style={{ ...BaseStyle.mv5, marginBottom: Platform.OS === 'ios' ? 60 : 0 }}>
            {DrawerMenus.map((menu, index) => (

              <TouchableOpacity
                testID={menu.route ? menu.route : 'logout'}
                key={`${menu.name}-${index}`}
                activeOpacity={1}
                onPress={() => {
                  if (menu.name !== '로그아웃') {
                    navigation.navigate('Home', { screen: menu.route })
                  } else {
...
