...
import Api from '../../Api'
import AnimateLoading from '../../components/Loading/AnimateLoading'
import Divider from '../../components/Divider'

const { width, height } = Dimensions.get('window')

const Notice = props => {
  const { navigation } = props

  const [list, setList] = React.useState([])
  const [isLoading, setLoading] = React.useState(true)

  const param = {
...

  return (
    <>
      {isLoading && <AnimateLoading description='데이터를 불러오는 중입니다.' />}

      {!isLoading &&
        <View testID='noticeScreen' style={{ flex: 1, backgroundColor: '#fff' }}>
          <Header navigation={navigation} title='공지사항' />

          {/* 공지사항 리스트 */}
          <View style={{ flex: 1, height }}>
            <FlatList
              bounces={false}
...
